--- a/T1566.md
+++ b/T1566.md
@@ -58,7 +58,8 @@ How |  メッセージを送り付ける
 ---
 <!--_footer : https://ja.wikipedia.org/wiki/%E3%83%95%E3%82%A3%E3%83%83%E3%82%B7%E3%83%B3%E3%82%B0_(%E8%A9%90%E6%AC%BA) -->
 ### フィッシングの語源
-![](./img/Phishing.png)`fishing`（釣り）のハッカー的なスラング（Leet的言い換えと呼ばれる意図的な同音別表記）であるが、fがphに変化しているのは`Phreaking`（フリーキング、音声によって電話網を意図的に誤作動させる不正行為）からの類推であると欧米では考えられている。しかし、日本国内のメディアでは`sophisticated`（洗練された）との合成語であるとする見解が主流である。このほか、`password harvesting fishing` の略とする説もある。
+![](./img/Phishing.png)
+`fishing`（釣り）のハッカー的なスラング（Leet的言い換えと呼ばれる意図的な同音別表記）であるが、fがphに変化しているのは`Phreaking`（フリーキング、音声によって電話網を意図的に誤作動させる不正行為）からの類推であると欧米では考えられている。しかし、日本国内のメディアでは`sophisticated`（洗練された）との合成語であるとする見解が主流である。このほか、`password harvesting fishing` の略とする説もある。
 
 ---
 <!--_footer : https://www.intellilink.co.jp/column/security/2020/061700.aspx -->
