--- a/T1571.md
+++ b/T1571.md
@@ -69,7 +69,7 @@ ID | T1571
 シグネチャを使用し、特定の攻撃者・マルウェアのトラフィックを識別し、侵入検知/防止する。
 
 #### M1030 Network Segmentation
-ファイアウォールとプロキシを適切に耕世しい、そのセグメントに必要なポートのみにトラフィックを制限する。
+ファイアウォールとプロキシを適切に構成し、そのセグメントに必要なポートのみにトラフィックを制限する。
 
 
 ---
@@ -127,7 +127,7 @@ const int kRestrictedPorts[] = {
 
 ---
 
-<!--_footer :  Service Name and Transport Protocol Port Number Registry -->
+<!--_footer :  https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml -->
 ### Service Name and Transport Protocol Port Number Registry
 サービス名とポート番号の対応を、IANAが「Service Name and Transport Protocol Port Number Registry」で公開している。
 
